--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,6 +23,11 @@ import { SITE_TITLE } from '../consts';
           <path fill="currentColor" d="M3.5 2.5A1.5 1.5 0 1 1 .5 2.5a1.5 1.5 0 0 1 3 0zM.75 5h2.5v9.5h-2.5V5zm4.75 0h2.4v1.3h.03c.33-.62 1.15-1.27 2.37-1.27 2.53 0 3 1.66 3 3.82v5.65h-2.5V9.5c0-.96-.02-2.2-1.34-2.2-1.34 0-1.55 1.05-1.55 2.13v5.07h-2.5V5z"/>
         </svg>
       </a>
+      <a href="mailto:fabian@fasser.dev" aria-label="Email">
+        <svg viewBox="0 0 16 16" aria-hidden="true" width="18" height="18">
+          <path fill="currentColor" d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
+        </svg>
+      </a>
     </div>
   </nav>
 </header>
