--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,12 +46,11 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 
         <!-- Pills / tags -->
         <div class="tags reveal" style="--delay: 0.55s">
-          <span class="tag">Service Providers</span>
-          <span class="tag">Automation</span>
           <span class="tag">Switzerland</span>
-          <span class="tag">MBA · IE University</span>
+          <span class="tag">Automation</span>
+          <span class="tag">MBA @IE University</span>
           <span class="tag">Ice Hockey</span>
-          <span class="tag">Espresso</span>
+          <span class="tag">Coffee</span>
         </div>
 
         <!-- CTA -->
